# aspnet-server-1/src/IO.Swagger/Controllers/DefaultApi.cs
@@ -1,7 +1,7 @@
 /*
- * Walking Skeleton API
+ * DeadCrumbs API
  *
- * This is the API for the Walking Skeleton.
+ * This is the API for for the DeadCrumbs application.
  *
  * OpenAPI spec version: 1
  * 
@@ -28,144 +28,113 @@ namespace IO.Swagger.Controllers
     /// </summary>
     [ApiController]
     public class DefaultApiController : ControllerBase
-    { 
-        //Connectionstring
-        private const string connection_string = "mongodb://admin:mongo801@130.225.57.95:27017";
-        
-
-        /// <summary>
-        /// deletes a location
-        /// </summary>
-        /// <param name="deviceId">The ID of the device.</param>
-        /// <response code="200">location deleted successfully</response>
-        /// <response code="400">deletion of location went wrong</response>
-        /// <response code="404">no location associated with devive ID</response>
-        [HttpDelete]
-        [Route("/Location/{deviceId}")]
-        [ValidateModelState]
-        [SwaggerOperation("DeleteLocation")]
-        public virtual IActionResult DeleteLocation([FromRoute][Required]int? deviceId)
+    {
+        public DefaultApiController()
         {
-            // TODO: Initiate client elsewhere
-            MongoClient dbClient = new MongoClient(connection_string);
-            var db = dbClient.GetDatabase("walkingskeleton");
-            var locations = db.GetCollection<BsonDocument>("locations");
-            var deleteFilter = Builders<BsonDocument>.Filter.Eq("deviceId", deviceId);
-            var deleteResult = locations.DeleteMany(deleteFilter);
-
-            if (deleteResult.DeletedCount == 0) return this.NotFound(deleteResult);
-            else if (!deleteResult.IsAcknowledged) return StatusCode(400, deleteResult); //TODO: Find out what it means when IsAcknowledged is false, and don't use StatusCode
-            else return this.Ok(deleteResult);
+            dbClient = new MongoClient("mongodb://admin:mongo801@130.225.57.95:27017");
+            db = dbClient.GetDatabase("DeadCrumbs");
         }
-
+        private MongoClient dbClient;
+        private IMongoDatabase db;
 
         /// <summary>
-        /// returns the location associated with device ID
+        /// returns the location associated with username
         /// </summary>
-        /// <param name="deviceId">The ID of the device.</param>
-        /// <response code="200">a json object of a location</response>
-        /// <response code="400">retrival of location went wrong</response> //TODO: Maybe remove this.
+        /// <param name="username">The username of the user.</param>
+        /// <response code="200">a JSON object of a location</response>
+        /// <response code="400">retrival of location went wrong</response>
         /// <response code="404">no device with that id</response>
         [HttpGet]
-        [Route("/Location/{deviceId}")]
+        [Route("/Location/{username}")]
         [ValidateModelState]
         [SwaggerOperation("GetLocation")]
-        [SwaggerResponse(statusCode: 200, type: typeof(Location), description: "a json object of a location")]
-        public virtual IActionResult GetLocation([FromRoute][Required]int? deviceId)
+        [SwaggerResponse(statusCode: 200, type: typeof(Location), description: "a JSON object of a location")]
+        public virtual IActionResult GetLocation([FromRoute][Required]string username)
         {
-            MongoClient dbClient = new MongoClient(connection_string);
-            var database = dbClient.GetDatabase("walkingskeleton");
-            var locationCollection = database.GetCollection<BsonDocument>("locations");
-            var filter = Builders<BsonDocument>.Filter.Eq("deviceId", deviceId);
-            BsonDocument result = locationCollection.Find(filter).FirstOrDefault();
-
-            if (result != null)
-            {            
-                Location location = new Location(){
-                    Id = result["id"].AsInt32,
-                    DeviceId = result["deviceId"].AsInt32,
-                    LocationValue = result["locationValue"].AsString
-                };  
-                
-                return new ObjectResult(location);  
-            }
-            else
+            var locationCollection = db.GetCollection<Location>("location");
+            List<Location> locations = locationCollection.Find((u) => u.UserRef == username).ToList();
+            if (locations.Count == 0)
             {
-                //TODO: use build in methods.
-                return StatusCode(404, "No location with that device ID");
-            }        
+                return StatusCode(404, $"No locations found!");
+            }
+            locations.Sort((l1, l2) => l2.Timestamp.Value.CompareTo(l1.Timestamp.Value));
+            Location newestLoc = locations[0];
+
+            var result = new ObjectResult(newestLoc);
+            return result;
         }
 
         /// <summary>
-        /// returns all locations as a list
+        /// return the user
         /// </summary>
-        /// <response code="200">a JSON array of locations</response>
-        /// <response code="404">no locations are in the database</response>
+        /// <param name="username">The username of the user.</param>
+        /// <response code="200">a user represented as json</response>
         [HttpGet]
-        [Route("/Locations")]
+        [Route("/User/{username}")]
         [ValidateModelState]
-        [SwaggerOperation("GetLocations")]
-        [SwaggerResponse(statusCode: 200, type: typeof(List<Location>), description: "a JSON array of locations")]
-        public virtual IActionResult GetLocations()
+        [SwaggerOperation("GetUser")]
+        [SwaggerResponse(statusCode: 200, type: typeof(User), description: "a user represented as json")]
+        public virtual IActionResult GetUser([FromRoute][Required]string username)
         {
-            MongoClient dbClient = new MongoClient(connection_string);
-            var database = dbClient.GetDatabase("walkingskeleton");
-            var locationCollection = database.GetCollection<BsonDocument>("locations");
-            // filter that matches everything.
-            var filter = Builders<BsonDocument>.Filter.Empty;
-            List<BsonDocument> results = locationCollection.Find(filter).ToList();
+            var userCollection = db.GetCollection<User>("user");
+            User user;
+
+            user = userCollection.Find((u) => u.Username == username).FirstOrDefault();
             
-            if (results.Count > 0)
-            {                
-                List<Location> lstLocations = new List<Location>();
-
-                foreach(var item in results)
-                {                    
-                    Location location = new Location(){
-                        // Have to convert from BsonValue.
-                        Id = item["id"].AsInt32,
-                        DeviceId = item["deviceId"].AsInt32,
-                        LocationValue = item["locationValue"].AsString
-                    };
-
-                    lstLocations.Add(location);
-
-                }
-                return new ObjectResult(lstLocations);
-            }
-            else
+            if (user == null)
             {
-                return StatusCode(404, "There are none locations in the database");
-            }           
+                return StatusCode(404, $"No user found called \"{username}\"!");
+            }
+            var result = new ObjectResult(user);
+            return result;
+        }
+
+        /// <summary>
+        /// returns all user as a list
+        /// </summary>
+        /// <response code="200">a JSON array of users</response>
+        [HttpGet]
+        [Route("/Users")]
+        [ValidateModelState]
+        [SwaggerOperation("GetUsers")]
+        [SwaggerResponse(statusCode: 200, type: typeof(List<User>), description: "a JSON array of users")]
+        public virtual IActionResult GetUsers()
+        {
+            var userCollection = db.GetCollection<User>("user");
+            List<User> users = userCollection.Find(_ => true).ToList();
+            if (users.Count==0)
+            {
+                return StatusCode(404, $"No users found!");
+            }
+            var result = new ObjectResult(users);
+            return result;
         }
 
         /// <summary>
         /// adds a new location
         /// </summary>
-        /// <param name="body">a json object of a location</param>
+        /// <param name="location">a JSON object of a location</param>
         /// <response code="201">location added successfully</response>
         /// <response code="400">location added unsuccessfully</response>
         [HttpPost]
         [Route("/Location")]
         [ValidateModelState]
         [SwaggerOperation("PostLocation")]
-        public virtual IActionResult PostLocation([FromBody]Location body)
+        public virtual IActionResult PostLocation([FromBody]Location location)
         {
-            // TODO: Initiate client elsewhere
-            MongoClient dbClient = new MongoClient(connection_string);
-            var db = dbClient.GetDatabase("walkingskeleton");
-            var locations = db.GetCollection<BsonDocument>("locations");
-            var locationDocument = new BsonDocument{
-                {"id", body.Id},
-                {"deviceId", body.DeviceId},
-                {"locationValue", body.LocationValue},
-			};
+            try
+            {
+                var locationCollection = db.GetCollection<Location>("location");
+                locationCollection.InsertOne(location);
+            }
+            catch (Exception e)
+            {
 
-            // TODO: Check if it was successful.
-            locations.InsertOne(locationDocument);
-
-            // It seems like incorrect input is handled automatically and an error (400) is returned
-            return this.Ok("Done");
+                return StatusCode(400, e.Message);
+            }
+            
+           
+            return StatusCode(201);
         }
     }
 }
