# aspnet-server-1/src/IO.Swagger/wwwroot/swagger-original.json
@@ -1,58 +1,78 @@
 {
   "openapi" : "3.0.3",
   "info" : {
-    "title" : "Walking Skeleton API",
-    "description" : "This is the API for the Walking Skeleton.",
+    "title" : "DeadCrumbs API",
+    "description" : "This is the API for for the DeadCrumbs application.",
     "version" : "1"
   },
   "servers" : [ {
-    "url" : "url1",
-    "description" : "production server"
-  }, {
-    "url" : "url2",
-    "description" : "testing server"
+    "url" : "/"
   } ],
   "paths" : {
-    "/Locations" : {
+    "/Users" : {
       "get" : {
-        "summary" : "returns all locations as a list",
-        "operationId" : "getLocations",
+        "summary" : "returns all user as a list",
+        "operationId" : "getUsers",
         "responses" : {
           "200" : {
-            "description" : "a JSON array of locations",
+            "description" : "a JSON array of users",
             "content" : {
               "application/json" : {
                 "schema" : {
                   "type" : "array",
                   "items" : {
-                    "$ref" : "#/components/schemas/Location"
+                    "$ref" : "#/components/schemas/user"
                   },
                   "x-content-type" : "application/json"
                 }
               }
             }
-          },
-          "404" : {
-            "description" : "no locations are in the database"
           }
         }
       }
     },
-    "/Location/{deviceId}" : {
+    "/User/{username}" : {
       "get" : {
-        "summary" : "returns the location associated with device ID",
-        "operationId" : "getLocation",
+        "summary" : "return the user",
+        "operationId" : "getUser",
         "parameters" : [ {
-          "name" : "deviceId",
+          "name" : "username",
           "in" : "path",
-          "description" : "The ID of the device.",
+          "description" : "The username of the user.",
           "required" : true,
           "style" : "simple",
           "explode" : false,
           "schema" : {
-            "minimum" : 1,
-            "type" : "integer",
-            "format" : "int32"
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "a user represented as json",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/user"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/Location/{username}" : {
+      "get" : {
+        "summary" : "returns the location associated with username",
+        "operationId" : "getLocation",
+        "parameters" : [ {
+          "name" : "username",
+          "in" : "path",
+          "description" : "The username of the user.",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "string"
           }
         } ],
         "responses" : {
@@ -61,7 +81,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/Location"
+                  "$ref" : "#/components/schemas/location"
                 }
               }
             }
@@ -73,34 +93,6 @@
             "description" : "no device with that id"
           }
         }
-      },
-      "delete" : {
-        "summary" : "deletes a location",
-        "operationId" : "deleteLocation",
-        "parameters" : [ {
-          "name" : "deviceId",
-          "in" : "path",
-          "description" : "The ID of the device.",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "minimum" : 1,
-            "type" : "integer",
-            "format" : "int32"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "location deleted successfully"
-          },
-          "400" : {
-            "description" : "deletion of location went wrong"
-          },
-          "404" : {
-            "description" : "no location associated with devive ID"
-          }
-        }
       }
     },
     "/Location" : {
@@ -108,7 +100,7 @@
         "summary" : "adds a new location",
         "operationId" : "postLocation",
         "requestBody" : {
-          "$ref" : "#/components/requestBodies/Location"
+          "$ref" : "#/components/requestBodies/location"
         },
         "responses" : {
           "201" : {
@@ -123,52 +115,93 @@
   },
   "components" : {
     "schemas" : {
-      "Location" : {
-        "required" : [ "deviceId", "id", "locationValue" ],
+      "user" : {
+        "required" : [ "mac_address", "username" ],
         "type" : "object",
         "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "deviceId" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "locationValue" : {
+          "username" : {
             "type" : "string",
-            "example" : "some RSSI value"
+            "example" : "jacob6565"
+          },
+          "mac_address" : {
+            "type" : "string",
+            "format" : "D6:11:A1:23"
           }
         },
         "example" : {
-          "id" : 0,
-          "deviceId" : 6,
-          "locationValue" : "some RSSI value"
+          "mac_address" : "mac_address",
+          "username" : "jacob6565"
+        }
+      },
+      "location" : {
+        "required" : [ "deviceId", "id", "locationValue" ],
+        "type" : "object",
+        "properties" : {
+          "user_ref" : {
+            "type" : "string"
+          },
+          "yaw" : {
+            "type" : "number",
+            "format" : "float"
+          },
+          "position" : {
+            "$ref" : "#/components/schemas/position"
+          },
+          "timestamp" : {
+            "type" : "string",
+            "format" : "date-time"
+          }
+        },
+        "example" : {
+          "position" : {
+            "coordinates" : [ 6.0274563, 6.0274563 ],
+            "type" : "type"
+          },
+          "user_ref" : "user_ref",
+          "yaw" : 0.8008282,
+          "timestamp" : "2000-01-23T04:56:07.000+00:00"
+        }
+      },
+      "position" : {
+        "type" : "object",
+        "properties" : {
+          "type" : {
+            "type" : "string"
+          },
+          "coordinates" : {
+            "type" : "array",
+            "items" : {
+              "type" : "number",
+              "format" : "float"
+            }
+          }
+        },
+        "example" : {
+          "coordinates" : [ 6.0274563, 6.0274563 ],
+          "type" : "type"
         }
       }
     },
     "parameters" : {
-      "deviceId" : {
-        "name" : "deviceId",
+      "username" : {
+        "name" : "username",
         "in" : "path",
-        "description" : "The ID of the device.",
+        "description" : "The username of the user.",
         "required" : true,
         "style" : "simple",
         "explode" : false,
         "schema" : {
-          "minimum" : 1,
-          "type" : "integer",
-          "format" : "int32"
+          "type" : "string"
         }
       }
     },
     "requestBodies" : {
-      "Location" : {
+      "location" : {
         "description" : "a JSON object of a location",
         "content" : {
           "application/json" : {
             "schema" : {
-              "$ref" : "#/components/schemas/Location"
+              "$ref" : "#/components/schemas/location"
             }
           }
         },
